feat: [SSCA-1067]: Add spec for close and exclude artifact from remediation tracker
